--- a/kyoku-docker/docker-compose.yml
+++ b/kyoku-docker/docker-compose.yml
@@ -532,6 +532,56 @@ services:
       # - content-replica4
       # - content-replica5
 
+
+  gateway-redis:
+    image: redis/redis-stack:latest
+    container_name: gateway-redis
+    restart: always
+    ports:
+      - "1040:6379"
+    environment:
+      REDIS_PASSWROD: ${REDIS_GATEWAY_PASSWORD}
+    command: [
+      "redis-server",
+      "--requirepass",
+      "${REDIS_GATEWAY_PASSWORD}",
+      "--appendonly",
+      "yes"
+    ]
+    volumes:
+      - "./data/redis/gateway:/data"
+
+  auth-redis:
+    image: redis/redis-stack:latest
+    container_name: auth-redis
+    restart: always
+    ports:
+      - "1041:6379"
+    environment:
+      REDIS_PASSWROD: ${REDIS_AUTH_PASSWORD}
+    command: [
+      "redis-server",
+      "--requirepass",
+      "${REDIS_AUTH_PASSWORD}",
+      "--appendonly",
+      "yes"
+    ]
+    volumes:
+      - "./data/redis/auth:/data"
+
+  notification-rabbitmq:
+    image: rabbitmq:3.12.0-management
+    container_name: notification-rabbitmq
+    ports:
+      - "1100:5672"     # AMQP (your custom host port)
+      - "14000:15672"   # management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: ${NOTIFICATION_RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${NOTIFICATION_RABBITMQ_PASSWORD}
+    volumes:
+      - "./data/rabbit/notification:/var/lib/rabbitmq"
+
+
   kyoku-file-minio:
     image: minio/minio:latest
     container_name: kyoku-file-minio
@@ -569,6 +619,9 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+
+
+
 
 
 networks:
