--- a/kyoku-docker/mysql/user/sql/setup-replication-master.sql.template
+++ b/kyoku-docker/mysql/user/sql/setup-replication-master.sql.template
@@ -9,7 +9,7 @@ GRANT PROCESS ON *.* TO '{{MYSQL_USER_MONITOR_USER}}'@'%';
 GRANT SELECT ON performance_schema.* TO '{{MYSQL_USER_MONITOR_USER}}'@'%';
 
 -- Ensure root user can connect from anywhere
-CREATE USER IF NOT EXISTS '{{MYSQL_USER_USER}}'@'%' IDENTIFIED WITH caching_sha2_password BY '{{MYSQL_USER_PASSWORD}}';
+CREATE USER IF NOT EXISTS '{{MYSQL_USER_USER}}'@'%' IDENTIFIED WITH caching_sha2_password BY '{{MYSQL_ROOT_USER_PASSWORD}}';
 GRANT ALL PRIVILEGES ON *.* TO '{{MYSQL_USER_USER}}'@'%' WITH GRANT OPTION;
 
 FLUSH PRIVILEGES;
