fixed user-porxy server not working

--- a/kyoku-docker/.gitignore
+++ b/kyoku-docker/.gitignore
@@ -5,7 +5,7 @@ mysql/user/proxy/proxysql.cnf
 mysql/user/sql/setup-replication-master.sql
 mysql/playlist/proxy/proxysql.cnf
 mysql/playlist/sql/setup-replication-master.sql
-mysql/activity/proxy/proxysql.cnf
+mysql/activity/proxy/proxysql.conf
 mysql/activity/sql/setup-replication-master.sql
-mysql/content/proxy/proxysql.cnf
+mysql/content/proxy/proxysql.conf
 mysql/content/sql/setup-replication-master.sql
