--- a/kyoku-docker/docker-compose.yml
+++ b/kyoku-docker/docker-compose.yml
@@ -535,23 +535,23 @@ services:
   #     # - content-replica5
 
 
-  # gateway-redis:
-  #   image: redis/redis-stack:latest
-  #   container_name: gateway-redis
-  #   restart: always
-  #   ports:
-  #     - "1040:6379"
-  #   environment:
-  #     REDIS_PASSWROD: ${REDIS_GATEWAY_PASSWORD}
-  #   command: [
-  #     "redis-server",
-  #     "--requirepass",
-  #     "${REDIS_GATEWAY_PASSWORD}",
-  #     "--appendonly",
-  #     "yes"
-  #   ]
-  #   volumes:
-  #     - "./data/redis/gateway:/data"
+  gateway-redis:
+    image: redis/redis-stack:latest
+    container_name: gateway-redis
+    restart: always
+    ports:
+      - "1040:6379"
+    environment:
+      REDIS_PASSWROD: ${REDIS_GATEWAY_PASSWORD}
+    command: [
+      "redis-server",
+      "--requirepass",
+      "${REDIS_GATEWAY_PASSWORD}",
+      "--appendonly",
+      "yes"
+    ]
+    volumes:
+      - "./data/redis/gateway:/data"
 
   auth-redis:
     image: redis/redis-stack:latest
