created image build and added auth interceptor for image

--- a/Kyoku/gradle/libs.versions.toml
+++ b/Kyoku/gradle/libs.versions.toml
@@ -35,6 +35,8 @@ googleId = "1.1.1"
 
 secretsPlugin = "2.0.1"
 
+coilCore = "3.3.0"
+coilComposeVersion = "3.3.0"
 coilCompose = "2.7.0"
 material3WindowSizeClass = "1.4.0"
 
@@ -125,7 +127,10 @@ credentials = { group = "androidx.credentials", name = "credentials", version.re
 credentialsPlayServicesAuth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentials" }
 google-id = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleId" }
 
-coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
+
+coil3-core = { module = "io.coil-kt.coil3:coil-core", version.ref = "coilCore" }
+coil3-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilCore" }
+coil3-coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilComposeVersion" }
 material3WindowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3WindowSizeClass" }
 
 media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
